@@ -59,7 +59,7 @@
 #       Simon J. Gerraty <sjg@crufty.net>
 
 # RCSid:
-#	$Id: install-mk,v 1.253 2024/04/18 17:18:31 sjg Exp $
+#	$Id: install-mk,v 1.254 2024/05/06 20:41:08 sjg Exp $
 #
 #	@(#) Copyright (c) 1994-2024 Simon J. Gerraty
 #
@@ -74,7 +74,7 @@
 #	sjg@crufty.net
 #
 
-MK_VERSION=20240414
+MK_VERSION=20240504
 OWNER=
 GROUP=
 MODE=444
