@@ -6,7 +6,7 @@ SRCTOP?= ${.CURDIR:H:H}
 
 # things set by configure
 
-_MAKE_VERSION?=20240430
+_MAKE_VERSION?=20240508
 
 prefix?= /usr
 srcdir= ${SRCTOP}/contrib/bmake
