@@ -1,3 +1,11 @@
+2024-05-07  Simon J Gerraty  <sjg@beast.crufty.net>
+
+	* VERSION (_MAKE_VERSION): 20240508
+	Merge with NetBSD make, pick up
+	o make: ensure variables set on command line get added to
+	.MAKEOVERRIDES (even if they start with '.') so they are passed to
+	sub-makes.
+
 2024-04-30  Simon J Gerraty  <sjg@beast.crufty.net>
 
 	* VERSION (_MAKE_VERSION): 20240430
